add a fixed navbar and fixed footer

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <nav>
             <h2 class="logo">Portfolio</h2>
             <ul>
-                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About me</a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contacts">contacts</a></li>
             </ul>
+            
         </nav>
+    </div>
     </header>
     <main>
         <div class="content">
@@ -33,10 +34,10 @@
     </div>
 </div>
         <section class="about">
-            <div class="main">
+            <div  id="about" class="main">
                 <img src="./bel-image.jpg" id="belindanabudde-image"alt="Image of me">
                 <div class="about-text">
-                    <h2 id="about">About me</h2>
+                    <h2>About me</h2>
                     <h5 id="aboutmeh5">Web developer</h5>
                     <p id="para-1">My name is Nabudde Belinda.I am a person who loves to change the world with just one touch of a computer
                     .i have been building web pages using languages like HTML,CSS and many more.i have 
@@ -50,7 +51,6 @@
         <div class="projects">
             <div class="title-project">
                 <h2 id="projects">Projects-section</h2>
-
             </div>
             <div class="box">
                 <div class="card">
@@ -104,8 +104,6 @@
         <img id="email-image" src="./email-image.png" alt="email"/>
         <a href="#">google maps</a>
         <img id="address-image" src="./adress-image.jpg" alt="address"/>
-        
-
     </div>
 </footer>
 </body>
