add icons to contact and real links

--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@
 <footer>
     <h2 id="contacts"> contact</h2>
     <div class="social media">
-        <a href="#">facebook</a>
+        <a href="https://www.facebook.com/profile.php?id=100008180293945" target="=blank">facebook</a>
         <img id="facebook-image" src="./facebook-image.png" alt="Facebook"/>
-        <a href="#"> github</a>
+        <a href="https://github.com/BelindaNabudde" target="blank"> github</a>
         <img id="github-image"src="./github-image.png" alt="github"/>
-        <a href="#">email</a>
+        <a href="mailto:kaseddeblairebelinda@gmail.com" target="blank">email</a>
         <img id="email-image" src="./email-image.png" alt="email"/>
-        <a href="#">google maps</a>
+        <a href="https://www.google.com/search?sxsrf=APq-WBu-HBmt85r9qbwsM8QU4Dl1-JDpsA:1646592893603&q
+        =Kyebando+Road&ludocid=10649677021586009174&gsas=1&client=ms-android-xiaomi-rev1&lsig=AB86z5UTU
+        jBaSfJq6ZLRVBJljTaN&kgs=f1aec0e02d8ee977&shndl=-1&source=sh/x/kp/local/2&entrypoint=sh/x/kp/local" 
+        target="blank">google maps</a>
         <img id="address-image" src="./adress-image.jpg" alt="address"/>
     </div>
 </footer>
