--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#about">About me</a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contacts">contacts</a></li>
+                <li><a href ="#feedback"> Feedback</a></li>
             </ul>
             
         </nav>
@@ -91,6 +92,11 @@
         </div>   
     </div>   
     </div>
+    </div>
+    <div class="feed-back">
+        <h2 id ="feedback">Feedback</h2>
+        <textarea type="text" placeholder="write your feedback"></textarea>
+        <a class="button1" href="#">Send </a>
     </div>
 </main>
 <footer>
