Implementing all feedback

--- a/index.html
+++ b/index.html
@@ -3,35 +3,26 @@
 <head>
     <title>Personal portfolio</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="preconnet" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0
-    ,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=
-    swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <link rel="stylesheet" type="text/css" href="./style.css">    
 <body>
     <header>
     <div class="hero">
         <nav>
-            <h2 class="logo">Portfolio</h2>
             <ul>
                 <li><a href="#about">About me</a></li>
                 <li><a href="#projects">projects</a></li>
-                <li><a href="#contacts">contacts</a></li>
                 <li><a href ="#feedback"> Feedback</a></li>
-            </ul>
-            
+                <li><a href="#contacts">contacts</a></li>
+            </ul>    
         </nav>
     </div>
     </header>
     <main>
         <div class="content">
-        <h2>Hey i am</h2>
+        <h1 id="heading1">Hey I am</h1>
         <h1>Belinda Nabudde</h1>
-        <h2>Aspiring web developer</h2>
+        <h2> An Aspiring developer</h2>
     </div>
 </div>
         <section class="about">
@@ -39,8 +30,8 @@
                 <img src="./bel-image.jpg" id="belindanabudde-image"alt="Image of me">
                 <div class="about-text">
                     <h2>About me</h2>
-                    <h5 id="aboutmeh5">Web developer</h5>
-                    <p id="para-1">My name is Nabudde Belinda.I am a person who loves to change the world with just one touch of a computer
+                    <h5 id="aboutmeh5">Who is Belinda Nabudde</h5>
+                    <p id="para-1">I am an Aspiring web developer.I am a person who loves to change the world with just one touch of a computer
                     .i have been building web pages using languages like HTML,CSS and many more.i have 
                     knowledge on how to use web developing tools like github,figma. i am 
                     also farmiliar with using git and version controls systems like the VScode.for the 
@@ -49,9 +40,9 @@
                      technologies
                     </p>    
         </section>
-        <div class="projects">
+        <div  class="projects">
             <div class="title-project">
-                <h2 id="projects">Projects-section</h2>
+                <h2 id="projects" >Projects-section</h2>
             </div>
             <div class="box">
                 <div class="card">
@@ -61,7 +52,7 @@
                         <p>The KCF survey form project requres you to create a tool for collecting
                         data.
                         <P style="text-align: center;"> 
-                            <a href="file:///C:/Users/USER/Desktop/the%20survey/index.html" target="blank"> the project</a>
+                            <a href="https://belindas-assigment2.netlify.app/" target="blank"> the project</a>
                         </P>
                     </div>
                 </div>
@@ -84,7 +75,7 @@
                         <p>This is a simple portifolio about myself.get to know me better and also incase you
                             would like to contact me. </p>
                         <P style="text-align: center;"> 
-                            <a href="file:///C:/Users/USER/Desktop/kanzucode-feb-project/index.html" target="blank">the project</a>
+                            <a href="https://belindas-capstone-project.netlify.app/" target="blank">the project</a>
                         </P>
                     </div>
                 </div>
@@ -108,12 +99,12 @@
         <img id="github-image"src="./github-image.png" alt="github"/>
         <a href="mailto:kaseddeblairebelinda@gmail.com" target="blank">email</a>
         <img id="email-image" src="./email-image.png" alt="email"/>
-        <a href="https://www.google.com/search?sxsrf=APq-WBu-HBmt85r9qbwsM8QU4Dl1-JDpsA:1646592893603&q
-        =Kyebando+Road&ludocid=10649677021586009174&gsas=1&client=ms-android-xiaomi-rev1&lsig=AB86z5UTU
-        jBaSfJq6ZLRVBJljTaN&kgs=f1aec0e02d8ee977&shndl=-1&source=sh/x/kp/local/2&entrypoint=sh/x/kp/local" 
+        <a href="https://www.google.com/search?client=ms-android-xiaomi-rev1&sxsrf=APq-WBu-HBmt85r9qbwsM8QU4Dl1-JDpsA
+        :1646592893603&q=Kyebando+Road&ludocid=10649677021586009174&gsas=1&client=ms-android-xiaomi-rev1&ibp=gwp;0,7&
+        lsig=AB86z5UTUjBaSfJq6ZLRVBJljTaN&kgs=f1aec0e02d8ee977&shndl=-1&source=sh/x/kp/local/2&entrypoint=sh/x/kp/local" 
         target="blank">google maps</a>
         <img id="address-image" src="./adress-image.jpg" alt="address"/>
     </div>
-</footer>
+</footer> -->
 </body>
 </html>
