--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>Personal portfolio</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
-    <link rel="stylesheet" type="text/css" href="./style.css">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
+    <link rel="stylesheet" type="text/css" href="./style.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+</head>  
 <body>
     <header>
     <div class="hero">
@@ -92,19 +94,23 @@
 </main>
 <footer>
     <h2 id="contacts"> contact</h2>
-    <div class="social media">
-        <a href="https://www.facebook.com/profile.php?id=100008180293945" target="=blank">facebook</a>
+    <div class="social-media">    
+        <a href="https://www.facebook.com/profile.php?id=100008180293945" target="=blank">Facebook</a>
+            <!-- <i class="fa-brands fa-facebook"></i> -->
         <img id="facebook-image" src="./facebook-image.png" alt="Facebook"/>
-        <a href="https://github.com/BelindaNabudde" target="blank"> github</a>
+        <a href="https://github.com/BelindaNabudde" target="blank">github</a>
+            <!-- <i class="fa-brands fa-github"></i> -->
         <img id="github-image"src="./github-image.png" alt="github"/>
         <a href="mailto:kaseddeblairebelinda@gmail.com" target="blank">email</a>
+         <!-- <i class="fa-solid fa-mailbox"></i> -->
         <img id="email-image" src="./email-image.png" alt="email"/>
         <a href="https://www.google.com/search?client=ms-android-xiaomi-rev1&sxsrf=APq-WBu-HBmt85r9qbwsM8QU4Dl1-JDpsA
         :1646592893603&q=Kyebando+Road&ludocid=10649677021586009174&gsas=1&client=ms-android-xiaomi-rev1&ibp=gwp;0,7&
         lsig=AB86z5UTUjBaSfJq6ZLRVBJljTaN&kgs=f1aec0e02d8ee977&shndl=-1&source=sh/x/kp/local/2&entrypoint=sh/x/kp/local" 
-        target="blank">google maps</a>
+        target="blank">address</a>
+        <!-- <i class="fa-solid fa-location-pin"></i></a>     -->
         <img id="address-image" src="./adress-image.jpg" alt="address"/>
     </div>
-</footer> -->
+</footer>
 </body>
 </html>
